# kuznezhik

./: .gitmodules  LICENSE  README.md
kuznechik-linux-x86/: CMakeLists.txt  README  eval.sh  galois.cpp  galois.h  kuznechik.cpp  kuznechik.h  lib.inc  main.cpp  preresults  tables_data.inc  tables_defines.inc  tables_galois_data.inc  tables_galois_defines.inc  tables_generator.cpp  tables_keys_defines.inc  tables_mul_data.inc  tables_mul_defines.inc  tables_precompiled_data.inc  test_galois.c  w128.h  w128funcs.asm
kuznechik-linux-x86/bench/: results.txt
kuznechik-mcs51/: .gitignore  README  main.asm  tables_data_mcu51.inc  tables_defines_mcu51.inc  tables_galois_data_mcu51.inc  tables_galois_defines_mcu51.inc
